// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`An EColorField > looks like a textfield > empty 1`] = `
<div data-app>
     <div class="e-form-container"
          name="test"
          required="false">
          <div class="v-input v-input--center-affix v-input--density-default v-input--horizontal v-locale--is-ltr v-text-field v-theme--light">
               <div class="v-input__prepend">
                    <div class="e-colorswatch e-colorswatch--null elevation-0 mt-n1 mt-n1 v-btn v-btn--density-default v-btn--elevated v-btn--rounded v-btn--size-default v-btn--variant-elevated v-theme--light"
                         style="height: 30px; width: 30px;"
                         type="button">
                         <span class="v-btn__overlay"></span>
                         <span class="v-btn__underlay"></span>
                         <!---->
                         <span class="v-btn__content"
                               data-no-activator></span>
                         <!---->
                         <!---->
                    </div>
               </div>
               <div class="v-input__control">
                    <div class="v-field v-field--center-affix v-field--variant-filled v-locale--is-ltr v-theme--light">
                         <div class="v-field__overlay"></div>
                         <div class="v-field__loader">
                              <div aria-hidden="true"
                                   aria-valuemax="100"
                                   aria-valuemin="0"
                                   class="v-locale--is-ltr v-progress-linear v-theme--light"
                                   role="progressbar"
                                   style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                                   <!---->
                                   <div class="bg-primary v-progress-linear__background"></div>
                                   <div class="bg-primary v-progress-linear__buffer"
                                        style="width: 0%;"></div>
                                   <transition-stub appear="false"
                                                    css="true"
                                                    name="fade-transition"
                                                    persisted="false">
                                        <div class="v-progress-linear__indeterminate">
                                             <div class="bg-primary long v-progress-linear__indeterminate"></div>
                                             <div class="bg-primary short v-progress-linear__indeterminate"></div>
                                        </div>
                                   </transition-stub>
                                   <!---->
                              </div>
                         </div>
                         <!---->
                         <div class="v-field__field"
                              data-no-activator>
                              <label aria-hidden="true"
                                     class="v-field-label v-field-label--floating v-label">
                                   <!---->test
                              </label>
                              <label aria-hidden="false"
                                     class="v-field-label v-label"
                                     for
                                     id>
                                   <!---->test
                              </label>
                              <!---->
                              <input aria-labelledby="input-v-1-label"
                                     class="v-field__input"
                                     id
                                     size="1"
                                     type="text">
                              <!---->
                         </div>
                         <!---->
                         <!---->
                         <div class="v-field__outline">
                              <!---->
                              <!---->
                         </div>
                    </div>
               </div>
               <!---->
               <!---->
          </div>
     </div>
</div>
`;

exports[`An EColorField > looks like a textfield > with text 1`] = `
<div data-app>
     <div class="e-form-container"
          name="test"
          required="false"
          value="#FF0000">
          <div class="v-input v-input--center-affix v-input--density-default v-input--dirty v-input--horizontal v-locale--is-ltr v-text-field v-theme--light">
               <div class="v-input__prepend">
                    <div aria-label="#FF0000"
                         class="e-colorswatch elevation-0 mt-n1 mt-n1 v-btn v-btn--density-default v-btn--elevated v-btn--rounded v-btn--size-default v-btn--variant-elevated v-theme--light"
                         style="height: 30px; width: 30px; background-color: rgb(255, 0, 0); color: rgb(255, 255, 255); caret-color: rgb(255, 255, 255);"
                         type="button">
                         <span class="v-btn__overlay"></span>
                         <span class="v-btn__underlay"></span>
                         <!---->
                         <span class="v-btn__content"
                               data-no-activator></span>
                         <!---->
                         <!---->
                    </div>
               </div>
               <div class="v-input__control">
                    <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-filled v-locale--is-ltr v-theme--light">
                         <div class="v-field__overlay"></div>
                         <div class="v-field__loader">
                              <div aria-hidden="true"
                                   aria-valuemax="100"
                                   aria-valuemin="0"
                                   class="v-locale--is-ltr v-progress-linear v-theme--light"
                                   role="progressbar"
                                   style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                                   <!---->
                                   <div class="bg-primary v-progress-linear__background"></div>
                                   <div class="bg-primary v-progress-linear__buffer"
                                        style="width: 0%;"></div>
                                   <transition-stub appear="false"
                                                    css="true"
                                                    name="fade-transition"
                                                    persisted="false">
                                        <div class="v-progress-linear__indeterminate">
                                             <div class="bg-primary long v-progress-linear__indeterminate"></div>
                                             <div class="bg-primary short v-progress-linear__indeterminate"></div>
                                        </div>
                                   </transition-stub>
                                   <!---->
                              </div>
                         </div>
                         <!---->
                         <div class="v-field__field"
                              data-no-activator>
                              <label aria-hidden="false"
                                     class="v-field-label v-field-label--floating v-label"
                                     for>
                                   <!---->test
                              </label>
                              <label aria-hidden="true"
                                     class="v-field-label v-label"
                                     id>
                                   <!---->test
                              </label>
                              <!---->
                              <input aria-labelledby="input-v-1-label"
                                     class="v-field__input"
                                     id
                                     size="1"
                                     type="text"
                                     value="#FF0000">
                              <!---->
                         </div>
                         <!---->
                         <!---->
                         <div class="v-field__outline">
                              <!---->
                              <!---->
                         </div>
                    </div>
               </div>
               <!---->
               <!---->
          </div>
     </div>
</div>
`;
